# Interview_Case_Study

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
tests/: api_testing.ipynb  converted_dataframe.csv  data_extract_as_csv.csv  monthly-max-values.csv  nexara_total.csv
utils/: api_client.py  connectors.py  transformations.py
