[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sprints-technical-case-study"
version = "0.1.0"
authors = [
  {name = "Joel Davis", email = "jdavis2011@hotmail.co.uk"},
]

description = "ETL process using FastAPI for the Sprints Case Study"
readme = "README.md"

requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pandas>=2.0.0",
    "requests>=2.31.0",
    "python-dateutil>=2.8.2",
]

[tool.setuptools]
packages = ["utils"]